fixed buttons and spacing front end

--- a/beer-or-horse-frontend/css/horsebeer.css
+++ b/beer-or-horse-frontend/css/horsebeer.css
@@ -27,6 +27,7 @@ body {
     width: 110%;
     position: fixed;
     bottom: 0px;
+    z-index: -1
 }
 #rules-card{
     width: 18rem; 
@@ -58,5 +59,4 @@ body {
 #top-score-location{
     justify-content: center;
     text-align: center;
-    padding-top: 100px
 }
